# gcp-bq-sse

./: README.md  pyproject.toml
src/mcp_bq_sse/: __init__.py  bigqueryOp.py  server.py
